# learn-ai

./: Readme.md
bank_statement_analysis/: Dockerfile  Readme.md  app.py  docker-compose.yml  pyproject.toml
bank_statement_analysis/.devcontainer/: devcontainer.json
